--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,4 @@ psycopg2>=2.8.6,<2.9
 drf-spectacular>=0.15.1,<0.16
 django-cors-headers==3.13.0
 Pillow>=8.2.0,<8.3.0
+djangorestframework-simplejwt>=5.0.0,<5.2.2
