--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,4 @@ drf-spectacular>=0.15.1,<0.16
 django-cors-headers==3.13.0
 Pillow>=8.2.0,<8.3.0
 djangorestframework-simplejwt>=5.0.0,<5.2.2
+uwsgi>=2.0.19,<2.1
